2014-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Added as<> and wrap conversion for QuantLib::Date

	* src/dates.cpp (advanceDate): Added simple test date function, also
	uses Rcpp Attributes as a first test case

	* inst/include/RQuantLib.h: Added and edited to allow inclusion of 
	actual rquantlib.h header via RcppExports

2014-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp (FittedBondCurve): Converted from deprecated
	FixedRateBondHelper to BondHelper with a FixedRateBond

2014-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Applied patch by Danilo Dias da Silva to support
	more calendars by adding more than two dozen new identifiers

	* man/Calendars.Rd: Updated accordingly

2014-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.12

	* man/FittedBondCurve.Rd: Test for suggested package zoo before use

2014-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* configure: Updated for Rcpp 0.11.0 and later
	* configure.in: Idem

	* src/Makevars.win: Updated for Rcpp 0.11.0 and later

	* R/inline.R (.onLoad): Set a default value of NULL for the QL libs
	and headers, and only override if either the corresponding env.vars
	are set are the quantlib-config script can be found

	* R/inline.R: Only supply LdFlags() and CFlags() results if stored
	values are non-null

2014-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (.onLoad): No longer need to add LdFlags() from Rcpp to
	PKG_LIBS when preparing ql_libs.
	* R/inline.R (inlineCxxPlugin): Rcpp.plugin.maker() can now be called
	directly as it is imported from Rcpp

	* DESCRIPTION: Add a requirement for Rcpp 0.11.0 or later

	* NAMESPACE: Import Rcpp.plugin.maker from Rcpp

2014-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.11

	* R/inline.R: For now, revert to using Rcpp:::Rcpp.plugin.maker() as
	only unreleased Rcpp exports this right now; will use '::' later

2014-01-15  Dirk Eddelbuettel  <edd@debian.org>
