@@ -1,12 +1,8 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-tryDateTest <- function(issueDateArg, days) {
-    .Call('RQuantLib_tryDateTest', PACKAGE = 'RQuantLib', issueDateArg, days)
-}
-
-tryDate <- function(issueDate, days) {
-    .Call('RQuantLib_tryDate', PACKAGE = 'RQuantLib', issueDate, days)
+advanceDate <- function(issueDate, days) {
+    .Call('RQuantLib_advanceDate', PACKAGE = 'RQuantLib', issueDate, days)
 }
 
 # Register entry points for exported C++ functions
