@@ -2,7 +2,8 @@
 #ifndef __RQuantLib_h__
 #define __RQuantLib_h__
 
-#include "rquantlib.h"
+#include "rquantlib.h"          	// manual addition so that we get non-Attributes functions
+#include "rquantlib_wrappers.h"
 #include "RQuantLib_RcppExports.h"
 
 #endif // __RQuantLib_h__
